# archelec-semantic-drift

./: .gitignore  README.md  extract_text.py  pyproject.toml
data/processed/: doc_ids_1973.pkl  doc_ids_1978.pkl  doc_ids_1981.pkl  doc_ids_1988.pkl  doc_ids_1993.pkl
notebooks/: 01_exploration.ipynb  02_preprocessing.ipynb  03_word2vec.ipynb  04_drift.ipynb  05_cas_qualitatifs.ipynb  06_topic_modeling.ipynb
results/tables/: 04_drift_scores.csv  06_lift_age_topics.csv  06_lift_par_famille.csv  06_lift_profession_topics.csv  06_propensity_par_famille.csv  06_synthese_drift_topic_famille.csv  06_topics_par_age_tranche.csv  06_topics_par_profession.csv
src/: extract_text.py  ocr.py
